--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.2.2",
   "description": "",
   "main": "src/index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node --esm src/index.ts"
+    "start": "nodemon --exec ts-node --esm src/express.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "google-auth-library": "^8.7.0",
     "googleapis": "^105.0.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1"
