--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/local-auth": "^2.1.1",
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "firebase": "^9.17.1",
     "google-auth-library": "^8.7.0",
     "googleapis": "^105.0.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/node": "^18.11.19",
     "typescript": "^4.9.5"
   }
