--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "firebase": "^9.17.1",
     "google-auth-library": "^8.7.0",
     "googleapis": "^105.0.0",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.19",
     "typescript": "^4.9.5"
   }
