--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.19",
+    "jest": "^29.4.3",
     "typescript": "^4.9.5"
   }
 }
