--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon --exec ts-node --esm src/express.ts"
   },
   "keywords": [],
@@ -25,10 +25,12 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.4.3",
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.19",
     "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
 }
