--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "googleapis": "^105.0.0",
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1"
+    "pg": "^8.10.0",
+    "ts-node": "^10.9.1",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.11.19",
+    "@types/node": "^18.15.0",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
