--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "start": "nodemon --exec ts-node --esm src/express.ts"
+    "dev": "set NODE_ENV=development && nodemon --exec ts-node --esm src/express.ts",
+    "prod": "set NODE_ENV=production && nodemon --exec ts-node --esm src/express.ts"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.0",
     "jest": "^29.4.3",
+    "supabase": "^1.45.2",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
